Closed Bug 39723 Opened 26 years ago Closed 26 years ago

two request (second bad) sent for click on image map

Categories

(Core :: Networking, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: bart.van.riel, Assigned: pollmann)

References

()

Details

(Whiteboard: [nsbeta2+][6/15] fix in hand)

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; Win95; en-US; m16) Gecko/20000517 BuildID: 2000051720 go to the specified URL. Click on one of the links in the picture with the cars, e.g. "FILE" (which means 'traffic jam', it' a dutch site). Apparently the browser does not recognize what is offered him, because it doen't show the right page. Instead, it shows what appears to be a directory structure, like on an FTP site. Try it with NC4.7x or MSIE 4/5 to see the correct functionality. Reproducible: Always Steps to Reproduce: 1.go to the specified URL. 2.Click on one of the links in the picture with the cars, e.g. "FILE" (which means 'traffic jam', it' a dutch site). 3. Actual Results: Apparently the browser does not recognize what is offered him, because it doen't show the right page. Instead, it shows what appears to be a directory structure, like on an FTP site. Expected Results: It should have displayed a web page.
<PRE> <A href="http://verkeer.anwb.org/hp_verkeersinformatie-20000404.mmp"><img border =0 src="http://verkeer.anwb.org/anwbbin/hp_verkeersinformatie-20000404.gif" ISMAP alt="Homepage Verkeersinformatie"></a></td></tr></PRE> This causes the bug, ISMAP ahref'ed to a .mmp file. Confirming, not sure where to move this.
Status: UNCONFIRMED → NEW
Ever confirmed: true
nsbeta2 6/1-. html 3.2 b.c.
Keywords: nsbeta2
This is an image map (ISMAP) but it behaves the same as just hitting the URL directly: http://verkeer.anwb.org/hp_verkeersinformatie-20000404.mmp I do not knwo what mmp files are, or how they interact with image maps, however it looks pretty much like an image map related issue. Assigning to pollman and attaching a reduced testcase.
Assignee: clayton → pollmann
Putting on [nsbeta2+][6/15] radar.
Whiteboard: [nsbeta2+][6/15]
We must not be sending the coordinates of the click to the server side image map, i.e.: http://verkeer.anwb.org/hp_verkeersinformatie-20000404.mmp?80,80
Status: NEW → ASSIGNED
We are submitting the coordinates of the image map correctly to the server. The server then responds with: HTTP/1.0 302 Found Date: Thu, 08 Jun 2000 05:41:53 GMT Server: Apache/1.1.3 Location: http://verkeer.anwb.org/tvn/ Content-type: text/html ... We then request the image a second time at the correct location. This time, we do not send the coordinates. Sounds like a necko issue to me, CC'ing some folks who might know.
Component: HTML Element → Networking
OS: Windows 95 → All
Hardware: PC → All
Summary: page doesn't load; link does not compute → image map coordinates not resent after HTTP 302
Actually, this may not be a networking thing - we write the second, flawed request before getting the response back for the first one. I'm wondering if both the anchor <a href="http://verkeer.anwb.org/hp_verkeersinformatie-20000404.mmp"> and the image map are firing OnLinkClick events, which may be causing this double request...
Arg, yup - that's it. The link click event is generated in both nsImageFrame::TriggerLink then later in nsGenericElement::TriggerLink. Removing the network folks to prevent further spammage. Sorry! :)
I have a fix in my tree, it's a bit of a hack and needs a better solution. My hack was to have nsHTMLImageElement not delegate click events to the generic element and leave it to the frame, since the frame handles all sorts of image map cases. The problem is I need to figure out how to differentiate and handle the simple case of <a><img></a> (not a map), because currently with my fix, clicking on an image like this doesn't do anything...
Summary: image map coordinates not resent after HTTP 302 → two request (second bad) sent for click on image map
Okay, I have a fix that works for this and the basic image-inside-anchor case. I'd love to go through an suite of image maps to be sure I'm not breaking anything though...
Whiteboard: [nsbeta2+][6/15] → [nsbeta2+][6/15] fix in hand
Target Milestone: --- → M17
Just checked in the fix. To verify, go to: http://verkeer.anwb.org Click on the Flashing word "FILE" If you see a map, the bug is fixed. Otherwise, you will see a page of text. Thanks!
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Fixed in the June 19th build (2000061908).
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: