Bug 39723: Send only one request to the server when clicking on an image map. r=joki